Fix Order not saving to in-memory db